# harbormaster

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyinstaller.spec  pyproject.toml
.github/workflows/: main.yml
apps/: plex-bridge.yml
apps/hello_world/: Dockerfile  app.py  docker-compose.yml
apps/n8n/: docker-compose.harbormaster.yml
apps/octoprint/: docker-compose.harbormaster.yml
apps/ztncui/: docker-compose.harbormaster.yml
docker_harbormaster/: cli.py  utils.py
docs/source/: best_practices.md  bundled_apps.md  conf.py  configuration.md  converting_compose_apps.md  examples.md  index.rst  installation.md  testing.md
example/: harbormaster.yml
misc/: Dockerfile  Dockerfile.pyinstall  Dockerfile.webhook  build-binary-docker.sh  build-binary.sh  crontab  docker-build.sh  docker-publish.sh  entrypoint  entrypoint.sh  hooks.json  run-harbormaster  ssh_config
tests/: test_harbormaster.py  test_main.py  test_unit.py  utils.py
